# general-backend

./: Cargo.toml  Dockerfile  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: build-and-deploy.yml
src/: main.rs
src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native  Dockerfile.native-micro
src/main/java/me/ponlawat/: GreetingResource.java  MyEntity.java
src/main/java/me/ponlawat/domain/admin/: AdminAiResource.java  AdminCategoryResource.java  AdminDashboardResource.java  AdminDashboardService.java  AdminTicketResource.java  AdminUserResource.java
src/main/java/me/ponlawat/domain/ai/: AIService.java
src/main/java/me/ponlawat/domain/category/: Category.java  CategoryRepository.java  CategoryService.java
src/main/java/me/ponlawat/domain/content/: Content.java  ContentRepository.java  ContentResource.java  ContentService.java
src/main/java/me/ponlawat/domain/githubaction/: GithubActionService.java  RequestAuthHeaderFactory.java
src/main/java/me/ponlawat/domain/ticket/: Ticket.java  TicketRepository.java  TicketResource.java  TicketService.java  TicketStatus.java  TicketType.java
src/main/java/me/ponlawat/domain/user/: User.java  UserRepository.java  UserResource.java  UserRole.java  UserService.java
src/main/resources/: application-prod.properties  application.properties  log4j2.xml
src/main/resources/auth/: privateKey.pem  publicKey.pem  rsaPrivateKey.pem
src/native-test/java/me/ponlawat/: GreetingResourceIT.java
src/test/java/me/ponlawat/: GreetingResourceTest.java
(+63 files in other folders)
